--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
@@ -40,7 +42,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAtgKtF1q3GUUOM0QxIomPm9mdYVhCrU9k" />
+            android:value="@string/google_maps_key" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
